# nippo

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md
.agents/skills/nippo/: SKILL.md
.claude/: CLAUDE.md
.claude/skills/nippo/: SKILL.md
.claude/skills/nippo/references/: guide-template.md  insight-template.md  reflection-template.md  reflection-theory.md
.github/workflows/: ci.yml
crates/collector/: Cargo.toml
crates/collector/src/: filter.rs  main.rs  output.rs  session.rs
crates/collector/src/sources/: claude_code.rs  codex.rs  mod.rs
docs/: data-sources.md
docs/templates/: insight-template.md  nippo-template.md  reflection-template.md  report-template.md  review-template.md  trend-template.md
