[package]
name = "nippo"
version = "0.1.3"
edition = "2024"
description = "Claude Code session collector for daily reports and reflection"
license = "MIT"
repository = "https://github.com/nwiizo/nippo"
keywords = ["claude", "daily-report", "reflection", "productivity"]
categories = ["command-line-utilities"]

[[bin]]
name = "nippo"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rusqlite = "0.37"

[dev-dependencies]
tempfile = "3"
